brat/test/golden/error/vecpat3.brat.golden
Error in test/golden/error/vecpat3.brat@FC {start = Pos {line = 3, col = 5}, end = Pos {line = 3, col = 19}}:
fst3([a,b]) = none
    ^^^^^^^^^^^^^^

  Branch cannot be reached

